--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/portfolio/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/portfolio/logo192.png"/><script src="https://kit.fontawesome.com/a26b39557e.js" crossorigin="anonymous"></script><link rel="manifest" href="/portfolio/manifest.json"/><title>React App</title><script defer="defer" src="/portfolio/static/js/main.bc745991.js"></script><link href="/portfolio/static/css/main.c686f946.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="fr"><head><meta charset="utf-8"/><link rel="icon" href="/portfolio/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/portfolio/logo192.png"/><script src="https://kit.fontawesome.com/a26b39557e.js" crossorigin="anonymous"></script><link rel="manifest" href="/portfolio/manifest.json"/><title>Portfolio</title><script type="application/ld+json">{
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Pierre",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "",
+        "addressLocality": "Ardèche",
+        "addressRegion": "France",
+        "postalCode": ""
+      },
+      "image": "https://kaspatou07.github.io/portfolio/static/media/logo.0c8370f8484af64bd44a.webp",
+      "email": "kawap07@gmail.com",
+      "url": "https://kaspatou07.github.io/portfolio/",
+      "description": "Portfolio de mes projets Openclassroom"
+      
+    }</script><script defer="defer" src="/portfolio/static/js/main.d40ba6e0.js"></script><link href="/portfolio/static/css/main.433b0cef.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
